bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: type mismatch;
 found   : Char('R')
 required: String
var letter: String = 'R'
                     ^